2001-05-30  Tambet Ingo  <tambet@ximian.com>

	* boot.pl.in (xst_boot_set_global_kw): Made it sane.
	(xst_boot_set_global): ditto.

	* file.pl.in (xst_file_buffer_save): Treat $buffer as scalar only if it is scalar.

2001-05-29  Arturo Espinosa Aldama  <arturo@ximian.com>

	* network.pl.in (xst_network_set_ppp_options_re): Respect
	comments and spacing in ppp files.
	(xst_network_set_ppp_options_unsup): Same.

2001-05-29  Arturo Espinosa Aldama  <arturo@ximian.com>

	* network.pl.in (xst_network_get_replace_table): Remove RESOLV_CONF
	in SuSE 7.0: it's created by SuSEconfig.

	* file.pl.in (xst_file_remove): Removes a file.

2001-05-29  Tambet Ingo  <tambet@ximian.com>

	* users-conf.in (change_user_chfn): Implement. use chfn to set finger infromation.
	(add_user): use (change_user_chfn).
	(change_user): ditto.

2001-05-28  Tambet Ingo  <tambet@ximian.com>

	* boot.pl.in (xst_boot_parse_images): Preserve leading spaces of images.
	(xst_boot_parse_global): Don't double escape quotes.
	(xst_boot_conf_edit_image): Fixed bug where XstPartitionType lines got wrong.
	(xst_boot_conf_add_image): ditto.

2001-05-25  Hans Petter Jansson  <hpj@ximian.com>

	* file.pl.in (xst_file_backup_rotate_dirs): Create the 'First' directory on
	  the first invocation, and provide a symlink to it which is rotated with
	  the other dirs. Fixes bug #2732.

2001-05-25  Arturo Espinosa Aldama  <arturo@ximian.com>

	* service.pl.in (xst_service_sysv_get_paths): Added redhat-7.1.

	* parse.pl.in (xst_parse_shell_escape): Some special chars
	are escaped when surrounded by quotes, so let's apply quotes
	if they appear, and not escape them with '\', as they may
	be latter surrounded by quotes and make the backslash appear.

	* parse.pl.in: More comment documentation.
	* replace.pl.in: same.

2001-05-25  Tambet Ingo  <tambet@ximian.com>

	* boot.pl.in (xst_boot_conf_set_images): Reimplement.
	(xst_boot_conf_add_image): Helper function for (xst_boot_conf_set_images).